--- a/connect-python-mysql.ipynb
+++ b/connect-python-mysql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,30 +25,55 @@
     ")\n",
     "\n",
     "mycursor = mydb.cursor()\n",
-    "mycursor.execute(\"CREATE DATABASE Python\") "
+    "# mycursor.execute(\"CREATE DATABASE Python\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Creating a table name 'promis' with columns 'study_id' etc\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "mycursor.execute(\"CREATE TABLE promis (study_id VARCHAR(255), name VARCHAR(255), contact_no int, project int)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting mysql\n",
-      "  Downloading mysql-0.0.3-py3-none-any.whl (1.2 kB)\n",
-      "Collecting mysqlclient\n",
-      "  Downloading mysqlclient-2.1.1-cp310-cp310-win_amd64.whl (178 kB)\n",
-      "     ------------------------------------- 178.4/178.4 kB 21.6 kB/s eta 0:00:00\n",
-      "Installing collected packages: mysqlclient, mysql\n",
-      "Successfully installed mysql-0.0.3 mysqlclient-2.1.1\n"
+      "1 record inserted.\n"
      ]
     }
    ],
    "source": [
-    "mycursor.execute(\"CREATE TABLE student (name VARCHAR(255), address VARCHAR(255), Phone int)\")"
+    "\"\"\"\n",
+    "Inserting Data in the table promis, below code going to take inputs from the users.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "a = input(\"Enter study_id:\")\n",
+    "b = input(\"Enter name:\")\n",
+    "c = input(\"Enter contact_no:\")\n",
+    "d = input(\"Enter project:\")\n",
+    "\n",
+    "sql = \"INSERT INTO promis (study_id, name, contact_no, project) VALUES (%s, %s, %s,%s)\"\n",
+    "val = (a,b,c,d)\n",
+    "mycursor.execute(sql, val)\n",
+    "\n",
+    "mydb.commit()\n",
+    "\n",
+    "print(mycursor.rowcount, \"record inserted.\")"
    ]
   },
   {
