--- a/connect-python-mysql.ipynb
+++ b/connect-python-mysql.ipynb
@@ -78,6 +78,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('QNF123', 'farrukh', 33121454, 0)]\n",
+      "('QNF123', 'farrukh', 33121454, 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Reading data from the table promis\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "mycursor.execute(\"SELECT * FROM promis\")\n",
+    "\n",
+    "myresult = mycursor.fetchall()\n",
+    "print (myresult)\n",
+    "\n",
+    "for x in myresult:\n",
+    "  print (x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
