--- a/connect-python-mysql.ipynb
+++ b/connect-python-mysql.ipynb
@@ -92,7 +92,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Reading data from the table promis\n",
+    "Reading data from the table promis, you can write your queries in execute function.\n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -103,6 +103,38 @@
     "\n",
     "for x in myresult:\n",
     "  print (x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('QNF123', 'farrukh', 33121454, 0)]\n",
+      "QNF123\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "Searching data with WHERE command\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "mycursor.execute(\"SELECT * FROM promis where name='farrukh'\")\n",
+    "\n",
+    "myresult = mycursor.fetchall()\n",
+    "print (myresult)\n",
+    "\n",
+    "for x in myresult:\n",
+    "  print (x[0])"
    ]
   },
   {
