--- a/connect-python-mysql.ipynb
+++ b/connect-python-mysql.ipynb
@@ -139,6 +139,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 record(s) deleted\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "DELETE a specific row based on condition\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "mycursor = mydb.cursor()\n",
+    "sql = \"DELETE FROM promis WHERE name = 'farrukh'\"\n",
+    "mycursor.execute(sql)\n",
+    "mydb.commit()\n",
+    "\n",
+    "print(mycursor.rowcount, \"record(s) deleted\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
