--- a/connect-python-mysql.ipynb
+++ b/connect-python-mysql.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,6 +163,32 @@
     "mydb.commit()\n",
     "\n",
     "print(mycursor.rowcount, \"record(s) deleted\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 record(s) affected\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "UPDATE promis table with changing name\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "mycursor = mydb.cursor()\n",
+    "sql = \"UPDATE promis SET name = 'khanfarrukh' WHERE name = 'farrukh'\"\n",
+    "mycursor.execute(sql)\n",
+    "mydb.commit()\n",
+    "print(mycursor.rowcount, \"record(s) affected\") "
    ]
   },
   {
