--- a/connect-python-mysql.ipynb
+++ b/connect-python-mysql.ipynb
@@ -2,11 +2,91 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install mysql-connector-python\n",
+    "import pandas as pd\n",
+    "import sqlite3 as sqlite\n",
+    "\n",
+    "def read_db(db_name):\n",
+    "    conn = sqlite.connect(db_name)\n",
+    "    c = conn.cursor()\n",
+    "    c.execute(\"SELECT * FROM master\")\n",
+    "    return c\n",
+    "\n",
+    "\n",
+    "def write_db(db_name, data):\n",
+    "    conn = sqlite.connect(db_name)\n",
+    "    # c = conn.cursor()\n",
+    "    # c.executemany(\"INSERT INTO master VALUES (?,?)\", data)\n",
+    "    data.to_sql('master', con=conn, if_exists='append',index=False)\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "\n",
+    "\n",
+    "def read_data(db_name):\n",
+    "    conn = sqlite.connect(db_name)\n",
+    "    # c = conn.cursor()\n",
+    "    # data = c.execute(\"SELECT * FROM master\").fetchall()\n",
+    "    df = pd.read_sql_query(\"SELECT * FROM master\", conn)\n",
+    "    conn.close()\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_name = r'\\\\cncd-dc1\\DATA SCIENCE DEPARTMENT\\1_phenotype_data\\3_master_files_entry_1_entry_2_raw\\nov_2022\\entry_1\\promis.sqlite'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read_db(db_name)\n",
+    "# write_db(db_name,data_frame_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frame = pd.read_csv(r'\\\\cncd-dc1\\DATA SCIENCE DEPARTMENT\\1_phenotype_data\\3_master_files_entry_1_entry_2_raw\\nov_2022\\entry_1\\updated_master_promis_1st_entry_nov_2022.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frame_1 = data_frame[:1].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_db(db_name,data_frame_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa#pip install mysql-connector-python\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -89,18 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Farrukh.Khan\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\io\\sql.py:761: UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pd.read_sql_query(\"SELECT * FROM updated_master_dm_1st_entry_august_2022 WHERE study_id = 'SZD450'\", mydb)\n",
     "\n",
@@ -208,7 +279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -222,12 +293,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4abed3fd9321dc7614b71bd5c204896f7c65793ff3154ca808aa6e5bed376756"
+    "hash": "8165ed911788f0582daec3efd596e41751143feba6ef52806a46549b658bfe61"
    }
   }
  },
